--- a/core/templates/personal.html
+++ b/core/templates/personal.html
@@ -158,7 +158,7 @@
         </div>
     </div>
     <table class="table table-condensed">
-        <tr class="info"> <th>Rubros gastos de personal</th> <th>Inicial</th> <th>Ejecutado</th> <th><a href="#" data-toggle="tooltip" data-original-title="Ejecutado/Inicial" class="link-info">%</a></th></tr>
+        <tr class="info"> <th>Rubros de gastos de personal</th> <th>Inicial</th> <th>Ejecutado</th> <th><a href="#" data-toggle="tooltip" data-original-title="Ejecutado/Inicial" class="link-info">%</a></th></tr>
     {% for row in rubros %}
     <tr>
         <td>{{ row.subtipogasto__nombre }}</td>
@@ -210,7 +210,7 @@
         </div>
     </div>
     <table class="table table-condensed">
-        <tr class="info"> <th>Rubros gasto de personal</th> <th>Inicial</th> <th>Actualizado</th> <th>Modificación</th> <th>Ejecutado</th> <th><a href="#" data-toggle="tooltip" data-original-title="Ejecutado/Actualizado" class="link-info">%</a></th></tr>
+        <tr class="info"> <th>Rubros de gastos de personal</th> <th>Inicial</th> <th>Actualizado</th> <th>Modificación</th> <th>Ejecutado</th> <th><a href="#" data-toggle="tooltip" data-original-title="Ejecutado/Actualizado" class="link-info">%</a></th></tr>
     {% for row in rubros %}
     <tr>
         <td class="pull-left">{{ row.subtipogasto__nombre }}</td>
