--- a/core/templates/ogm_chart.html
+++ b/core/templates/ogm_chart.html
@@ -372,7 +372,7 @@
                 <tr>
                     <td class="text-left">{{ key }}</td>
                     {% for year in year_list %}
-                    <td class="text-right">{{ data|keyvalue:year }}</td>
+                    <td class="text-right">x{{ data|keyvalue:year }}</td>
                     {% endfor %}
                    <!--td>{{ data.extra }}</td-->
                    <!-- old-fashioned way:
